Changed biblatex style to iso-authoryear

--- a/abschnitte/Einleitung.tex
+++ b/abschnitte/Einleitung.tex
@@ -237,8 +237,8 @@ Dieses To-do \snaptodo{Genutzte Parameter des To-dos auflisten} steht auch am Ra
 
 \section{Zitate}\label{sec:zitate}
 Nach~\cite{Bartels2008} wird ein Beispieltext vor dem ersten Zitat in einem Kapitel benötigt.\\
-\textcite{Yoshida1999} sagen hier steht ein Text. \\
-\textcite*{Burns2003} sagen hier steht ein Text. \\
+\parencite[45]{Yoshida1999} sagen hier steht ein Text. \\
+\textcite[44]{Burns2003} sagen hier steht ein Text. \\
 "`Hier steht ein Text."'~\autocite{Bartels2008} \\
 Hier steht ein Text.~\autocite[Vgl.][]{Bartels2008} \\
 Hier steht ein Text.~\autocite[][S. 200]{Bruno2009} \\
