--- a/aussehen/hbrs-inf.sty
+++ b/aussehen/hbrs-inf.sty
@@ -56,7 +56,7 @@
 
 % Literaturverzeichnis nach ISO 690 (Nachfolger von DIN 1505)
 % Further help at https://github.com/michal-h21/biblatex-iso690
-\usepackage[style=iso-authortitle]{biblatex}
+\usepackage[style=iso-authoryear]{biblatex}
 \addbibresource{datenbanken/Literaturverzeichnis.bib}
 \KOMAoptions{bibliography=totocnumbered}
 
