Added "Abbildung" before every entry in lof

--- a/Arbeit.tex
+++ b/Arbeit.tex
@@ -18,9 +18,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Anfang                                         %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\documentclass[a4paper, fontsize=11pt]{scrreprt}
+\documentclass[a4paper, fontsize=11pt, listof=entryprefix]{scrreprt}
 \input{Meta}
 \RequirePackage{aussehen/hbrs-inf}
+%\BeforeStartingTOC[lof]{\renewcommand*\autodot{:}} %Wenn man den Doppelpunkt im Abbildungsverzeichnis möchte
 \begin{document}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
